<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_activity_main">Anatom</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_forgot">ForgotPassActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">Anatom</string>
    <string name="startTest">Start practicing all</string>
    <string name="selectSystem">Select an organ system</string>
    <string name="selectBody">Select a body part</string>
    <string name="startCategoriesTest">Practice selected</string>
    <string name="action_settings">Settings</string>
    <string name="organSystems">Organ systems</string>
    <string name="bodyParts">Body parts</string>
    <string name="choose">Choose </string>
    <string name="highlighted">What is highlighted?</string>
    <string name="continueToNext">Continue</string>
    <string name="rate">Success rate: </string>
    <string name="doNotKnow">I don\'t know</string>
    <string name="exercise">Practice medical anatomy with personalized questions.</string>
    <string name="exit">Exit</string>
    <string name="internetAvailable">Internet is available</string>
    <string name="internetNotAvailable">Internet is not available</string>
    <string name="continuePracticing">Continue to practice</string>
    <string name="selectChapter">Select a chapter</string>

    <string name="s01">General anatomy</string>
    <string name="s02">Bones</string>
    <string name="s03">Joints</string>
    <string name="s04">Muscles</string>
    <string name="s05">Digestive system</string>
    <string name="s06">Respiratory system</string>
    <string name="s07">Urinary system</string>
    <string name="s08">Genital system</string>
    <string name="s09">Heart and blood vessels</string>
    <string name="s10">Lymphatic and immune system</string>
    <string name="s11">Peripheral nervous system</string>
    <string name="s12">Central nervous system</string>
    <string name="s13">Sense and skin</string>
    <string name="s15">Topography</string>
    <string name="A">Abdomen</string>
    <string name="B">Back</string>
    <string name="Hb">Head - Brain</string>
    <string name="Hf">Head - Face</string>
    <string name="LE">Lower Extremity</string>
    <string name="N">Neck</string>
    <string name="P">Pelvis</string>
    <string name="T">Thorax</string>
    <string name="UE">Upper Extremity</string>

    <string name="language">Language</string>
    <string name="czech">Czech</string>
    <string name="english">English</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="signout">Sign out</string>
    <string name="password">Password</string>
    <string name="passwordAgain">Password again</string>
    <string name="profile">Profile</string>
    <string name="firstName">First name</string>
    <string name="surname">Surname</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="about">About</string>
    <string name="aboutus">About us</string>
    <string name="aboutustext">
        Practice Anatomy is a joint project of research group Adaptive Learning at Faculty of Informatics of Masaryk University,
        and team Memorix comprising clinicians and medical students at Medical Faculty of Masaryk University, Brno, Czech republic.
    </string>
    <string name="mission">Mission</string>
    <string name="missionText">
        Our mission is to help students of medicine, anthropology or just anyone interested in human anatomy to practice their knowledge.
        Reviewing and recognizing anatomical structures and names (either in English or Latin) with pictures from Memorix Anatomy
        reinforces your knowledge. Our secondary goal is to examine the benefit of an innovative software model, which based on previous
        answers chooses the next question of the appropriate difficulty.
    </string>
    <string name="development">Development</string>
    <string name="developmentText">
        PracticeAnatomy.com is being developed at Faculty of Informatics of Masaryk University (Brno, Czech republic) by Adaptive Learning research group.
    </string>
    <string name="privacy">Privacy</string>
    <string name="privacyText">
        Data about your responses are being saved and used in order to improve user experience (select the most appropriate next question ) and research purposes. All research analyses are performed on anonymized data. The data from registration (Facebook, Google) are used only for identification during recurrent visits. We will not provide user identification data to a third party.
    </string>
    <string name="title_activity_login">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>//
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_passwords_do_not_match">Passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="withfb">with Facebook</string>
    <string name="withgoogle">with Google</string>
    <string name="failedLogin">Log in failed</string>
    <string name="failedLoginText">Password or username does not match.</string>
    <string name="registrationFailed">Registration failed</string>
    <string name="signedOut">Signed out</string>
    <string name="loggedAs">Logged as </string>
    <string name="error">Error</string>
    <string name="errorMessage">Unfortunately, there has been an error in the app</string>

</resources>
