<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Anatom"
        android:id="@+id/captionView"
        android:layout_gravity="center_horizontal"
        android:textColor="#fffaffff"
        android:textSize="45sp"
        android:background="@color/green"
        android:gravity="center"
        android:shadowColor="#000000"
        android:shadowDx="0.0"
        android:shadowDy="0.0"
        android:shadowRadius="3.0"
        android:textColorHighlight="#ff1f14ff" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/exercise"
        android:id="@+id/descriptionView"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:background="@color/green"
        android:gravity="center"/>

    <Button
        style="@style/menuButton"
        android:text="@string/startTest"
        android:id="@+id/randomTestButton"
        android:onClick="onTestClicked" />

    <Button
        style="@style/menuButton"
        android:text="@string/selectSystem"
        android:id="@+id/systemButton"
        android:onClick="onSystemCategoriesClicked" />

    <Button
        style="@style/menuButton"
        android:text="@string/selectBody"
        android:id="@+id/locationButton"
        android:onClick="onBodyCategoriesClicked" />

    <Button
        style="@style/menuButton"
        android:text="@string/exit"
        android:id="@+id/exitButton"
        android:onClick="onExitClicked" />

</LinearLayout>