<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black"
    android:weightSum="1"
    android:id="@+id/ll">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startCategoriesTest"
            android:id="@+id/button"
            android:layout_weight="1"
            android:onClick="onTestClicked"
            android:background="@color/button" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/organSystems"
            android:id="@+id/organSystems"
            android:layout_gravity="center_horizontal"
            android:textColor="#fffaffff"
            android:textSize="40sp"
            android:background="@color/green"
            android:gravity="center|center_horizontal"
            android:onClick="onSystemCategoriesLabelClicked"
            android:clickable="true"
            android:layout_weight="1"
            android:shadowColor="#000000"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="3.0"
            android:padding="1sp"
            android:layout_marginLeft="0.2dp"
            android:layout_marginRight="0.2dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bodyParts"
            android:id="@+id/bodyParts"
            android:background="@color/green"
            android:gravity="center|center_horizontal"
            android:layout_gravity="center_horizontal"
            android:textColor="#fffaffff"
            android:textSize="40sp"
            android:clickable="true"
            android:onClick="onBodyCategoriesLabelClicked"
            android:layout_weight="1"
            android:shadowColor="#000000"
            android:shadowDx="0.0"
            android:shadowDy="0.0"
            android:shadowRadius="3.0"
            android:padding="1sp"
            android:layout_marginLeft="0.2dp"
            android:layout_marginRight="0.2dp" />
    </LinearLayout>
    <ViewFlipper
    android:id="@+id/viewFlipper"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scrollView"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.13">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">
                    <TableRow>
                        <ImageButton
                            android:src="@drawable/s01"
                            android:tag="01"
                            style="@style/imageTileButton" />
                        <ImageButton
                            android:src="@drawable/s02"
                            android:tag="02"
                            style="@style/imageTileButton" />
                        <ImageButton
                            android:src="@drawable/s03"
                            android:tag="03"
                            style="@style/imageTileButton" />
                    </TableRow>
                    <TableRow>
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/s01"
                            android:tag="01" />
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/s02"
                            android:tag="02"  />
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/s03"
                            android:tag="03"  />
                    </TableRow>
                    <TableRow>
                        <ImageButton
                            android:src="@drawable/s04"
                            android:tag="04"
                            style="@style/imageTileButton" />
                        <ImageButton
                            android:src="@drawable/s05"
                            android:tag="05"
                            style="@style/imageTileButton" />
                        <ImageButton
                            android:src="@drawable/s06"
                            android:tag="06"
                            style="@style/imageTileButton" />
                    </TableRow>
                    <TableRow>
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/s04"
                            android:tag="04" />
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/s05"
                            android:tag="05"  />
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/s06"
                            android:tag="06"  />
                    </TableRow>
                    <TableRow>
                        <ImageButton
                            android:src="@drawable/s07"
                            android:tag="07"
                            style="@style/imageTileButton" />
                        <ImageButton
                            android:src="@drawable/s08"
                            android:tag="08"
                            style="@style/imageTileButton" />
                        <ImageButton
                            android:src="@drawable/s09"
                            android:tag="09"
                            style="@style/imageTileButton" />
                    </TableRow>
                    <TableRow>
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/s07"
                            android:tag="07" />
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/s08"
                            android:tag="08"  />
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/s09"
                            android:tag="09"  />
                    </TableRow>
                    <TableRow>
                        <ImageButton
                            android:src="@drawable/s11"
                            android:tag="11"
                            style="@style/imageTileButton" />
                        <ImageButton
                            android:src="@drawable/s12"
                            android:tag="12"
                            style="@style/imageTileButton" />
                        <ImageButton
                            android:src="@drawable/s15"
                            android:tag="15"
                            style="@style/imageTileButton" />
                    </TableRow>
                    <TableRow>
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/s11"
                            android:tag="11" />
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/s12"
                            android:tag="12"  />
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/s15"
                            android:tag="15"  />
                    </TableRow>
                </TableLayout></ScrollView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.13">
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal">
                    <TableRow>
                        <ImageButton
                            android:src="@drawable/b01"
                            android:tag="A"
                            style="@style/imageTileButton" />
                        <ImageButton
                            android:src="@drawable/b02"
                            android:tag="B"
                            style="@style/imageTileButton" />
                        <ImageButton
                            android:src="@drawable/b03"
                            android:tag="Hb"
                            style="@style/imageTileButton" />
                    </TableRow>
                    <TableRow>
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/A"
                            android:tag="A" />
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/B"
                            android:tag="B"  />
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/Hb"
                            android:tag="Hb"  />
                    </TableRow>
                    <TableRow>
                        <ImageButton
                            android:src="@drawable/b04"
                            android:tag="Hf"
                            style="@style/imageTileButton" />
                        <ImageButton
                            android:src="@drawable/b05"
                            android:tag="LE"
                            style="@style/imageTileButton" />
                        <ImageButton
                            android:src="@drawable/b06"
                            android:tag="N"
                            style="@style/imageTileButton" />
                    </TableRow>
                    <TableRow>
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/Hf"
                            android:tag="Hf" />
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/LE"
                            android:tag="LE"  />
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/N"
                            android:tag="N"  />
                    </TableRow>
                    <TableRow>
                        <ImageButton
                            android:src="@drawable/b07"
                            android:tag="P"
                            style="@style/imageTileButton" />
                        <ImageButton
                            android:src="@drawable/b08"
                            android:tag="T"
                            style="@style/imageTileButton" />
                        <ImageButton
                            android:src="@drawable/b09"
                            android:tag="UE"
                            style="@style/imageTileButton" />
                    </TableRow>
                    <TableRow>
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/P"
                            android:tag="P" />
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/T"
                            android:tag="T"  />
                        <TextView
                            style="@style/imageTileLabel"
                            android:text="@string/UE"
                            android:tag="UE"  />
                    </TableRow>
                </TableLayout></ScrollView>
            </LinearLayout>
    </ViewFlipper>
</LinearLayout>